<resources>

    <string name="app_name"><font color="#ffffff">Deadminer</font></string>
    <string name="facebook_app_id">515491542335561</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="get_started">Get Started!</string>
    <string name="google_login">Continue with Google</string>
    <string name="coin">Coin</string>
    <string name="deadline">Deadline</string>

    <string name="empty_bought_reward">You Haven\'t bought any reward !</string>

    <string name="fb_login_protocol_scheme">fb515491542335561</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
