<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/login_layout"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            >

            <EditText
                android:id="@+id/usernameTxt"
                android:hint="@string/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/test_button"
                android:textColor="#212121"
                android:layout_marginBottom="5dp"
                android:padding="8dp"
                />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:orientation="vertical"
                android:background="@drawable/test_button"
                android:textColor="#212121"
                android:padding="8dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            >

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:text="@string/Login"
                android:background="@drawable/my_button"
                android:layout_marginBottom="5dp"
                />

            <Button
                android:id="@+id/loginBtn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google_login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/buttongoogle"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account ?"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/get_started"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                />

        </LinearLayout>



        <!--<Button-->
        <!--android:id="@+id/tes__"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="tes"/>-->



    </LinearLayout>


</LinearLayout>