<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PartnersFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="5dp"
            android:text="Partners"
            android:textAlignment="center"
            android:textColor="?attr/textcolor"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/go_to_add_partner"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/textView"
            android:background="#00000000"
            android:src="@drawable/ic_person_add" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/gotoProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userImg"
                android:layout_width="96dp"
                android:layout_height="96dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="2dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/userImg"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Username"
                    android:textColor="?attr/textcolor"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/user_coin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coin"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_priority_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:id="@+id/partner_list_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/holo_red_dark"/>

    </LinearLayout>
</LinearLayout>